<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/how_to_use"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_use_text_1"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/center_wheen_screenshot"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_use_text_2"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_use_text_3"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>