<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="12dp"
            android:paddingEnd="0dp"
            android:text="@string/how_to_run"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_run_text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/server_screen"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_run_text_2"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/game_settings_screen_1"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_run_text_3"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/game_settings_screen_2"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="8dp"
            android:text="@string/how_to_run_text_4"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>